--- a/bio.html
+++ b/bio.html
@@ -1,42 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bio-data</title>
-    <link rel="stylesheet" href="style.css">
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Bio-data</title>
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Bio-data</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="resume.html">Resume</a>
-            <a href="bio.html">Bio-data</a>
-        </nav>
-    </header>
-    <main>
-        <table>
-            <tr>
-                <th>Field</th>
-                <th>Details</th>
-            </tr>
-            <tr>
-                <td>Name</td>
-                <td>[Your Name]</td>
-            </tr>
-            <tr>
-                <td>Date of Birth</td>
-                <td>01-01-1995</td>
-            </tr>
-            <tr>
-                <td>Address</td>
-                <td>[Your Address]</td>
-            </tr>
-        </table>
-    </main>
-    <footer>
-        <p>&copy; 2024 [Your Name]. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+ <header>
+ <h1>Bio-data</h1>
+ <nav>
+ <a href="index.html">Home</a>
+ <a href="resume.html">Resume</a>
+ <a href="bio.html">Bio-data</a>
+ </nav>
+ </header>
+ <main>
+ <center>
+ <table border="1" cellspacing="0" cellpadding="5">
+ <tr>
+ <th>Field</th>
+ <th>Details</th>
+ </tr>
+ <tr>
+ <td>Name</td>
+ <td>Puneeth</td>
+ </tr>
+ <tr>
+ <td>Address</td>
+ <td>Banglore, Karnataka, India</td>
+ </tr>
+ <tr>
+ <td>Email</td>
+ <td>ramtheboss44@gmail.com</td>
+ </tr> 
+ <tr>
+ <td>LinkedIn</td>
+ <td><a href="#">Puneeth</a></td>
+ </tr>
+ <tr>
+ <td>Education</td>
+ <td>Bachelor of Engineering - BE, Artificial and Data science Engineering (2022 - Ongoing)</td>
+ </tr>
+ <tr>
+ <td>Skills</td>
+ <td>Part Time JAVA Developer</td>
+ </tr>
+ </table>
+ </center>
+ </main>
+ <footer>
+ <p>&copy; 2024 Puneeth. All rights reserved.</p>
+ </footer>
+</body></html>
